--- a/package.json
+++ b/package.json
@@ -3,5 +3,15 @@
   "private": true,
   "workspaces": [
     "src/components/*"
-  ]
+  ],
+  "devDependencies": {
+    "lerna": "^3.22.1"
+  },
+  "scripts": {
+    "test": "lerna run test",
+    "test:button": "lerna run test --scope=@rcl/button",
+    "bump": "lerna version --conventional-commits --yes",
+    "bump:button": "lerna run test --scope=@rcl/button",
+    "diff": "lerna diff"
+  }
 }
