--- a/src/components/Card/package.json
+++ b/src/components/Card/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "test": "echo 'no test in Card'"
+  },
   "dependencies": {
     "@rcl/button": "1.0.0"
   }
