--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,8 @@
 {
-  "packages": ["src/components/*"],
-  "version": "0.0.1",
+  "packages": [
+    "src/components/*"
+  ],
+  "version": "1.0.1",
   "npmClient": "yarn",
   "useWorkspaces": true
 }
