--- a/src/components/Card/package.json
+++ b/src/components/Card/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@rcl/card",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
     "test": "echo 'no test in Card'"
   },
   "dependencies": {
-    "@rcl/button": "1.0.0"
+    "@rcl/button": "^1.0.1"
   }
 }
