add bump to card

--- a/src/components/Card/package.json
+++ b/src/components/Card/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "echo 'no test in Card!'"
+    "test": "echo 'no test in Card!'",
+    "bump": "lerna version --conventional-commits --yes"
   },
   "dependencies": {
     "@rcl/button": "^1.0.4"
