--- a/src/components/Button/package.json
+++ b/src/components/Button/package.json
@@ -4,6 +4,6 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "echo 'no test in Button'"
+    "test": "echo 'no test in Button!'"
   }
 }
